--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: jekyll-theme-minimal
+
+title : Paw Rights - Study
+author :
+  name : Tanami Muller
+  email : weitzeug@gmail.com
+  github : Tanami
+
+production_url : https://pawrights.com.au
