--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,9 @@ plugins:
   - jekyll-remote-theme
 
 remote_theme: jonaharagon/jekyll-bootstrap-theme
+
+excerpts:
+  show: false
+  
+bootstrap:
+  header_pages:
